# BRAINS-build-platform

./: .gitignore  .markdownlintignore  .vale.ini  CONTRIBUTING.md  README.md  install.ps1  pyproject.toml  requirements.txt
.github/workflows/: a11y.yml  codeql.yml  gitleaks.yml  markdownlint.yml  readability.yml  scorecard.yml  test.yml  trivy.yml  vale.yml
agents/: build-backend-sme.md  build-business-analyst.md  build-code-review-sme.md  build-debug-sme.md  build-dev-orchestrator.md  build-devops-sme.md  build-frontend-sme.md  build-pmo-lead.md  build-product-owner.md  build-qa-sme.md  build-security-sme.md
docs/: cli-reference.md
docs/dogfood/: 2026-05-26-meta-dogfood.md  2026-05-27-brains-website-dogfood.md
skills/build-adopt/: SKILL.md
skills/build-dashboard/: SKILL.md
skills/build-decision/: SKILL.md
skills/build-dispatch/: SKILL.md
skills/build-init/: SKILL.md
tests/: conftest.py  test_audit.py  test_cli_adopt.py  test_cli_dispatch.py  test_cli_dispatch_apply.py  test_cli_dispatch_reject.py  test_cli_init.py  test_cli_loop.py  test_cli_package.py  test_cli_package_edit.py  test_cli_persona.py  test_cli_portfolio.py  test_cli_schedule_scrum.py  test_cli_timeline.py  test_cli_transition.py  test_cli_triage.py  test_code_review_gate_integration.py  test_digest.py  test_dispatch_request_changes.py  test_dispatcher.py  test_end_to_end.py  test_git_utils.py  test_github_mirror.py  test_mirror_pull.py  test_ollama_client.py  test_paths.py  test_render_dashboard.py  test_schemas.py  test_state.py  test_survey.py  test_triage.py
(+54 files in other folders)
