[project]
name = "build-platform"
version = "0.1.0"
description = "BRAINS Build Platform — agentic end-to-end software delivery"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "BRAINS Incubator", email = "info@brainscertified.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "ruamel.yaml>=0.18",
  "jinja2>=3.1",
  "httpx>=0.27",
  "click>=8.1",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
build_platform = ["templates/*.j2", "templates/*.md.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
